005-securing-with-mtls/igw/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: sentences
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: MUTUAL
      credentialName: sentences-tls-secret
    hosts:
    - "<YOUR_NAMESPACE>.sentences.istio.eficode.academy"
