005-securing-with-mtls/igw/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sentences
spec:
  hosts:
  - "<YOUR_NAMESPACE>.sentences.istio.eficode.academy"
  exportTo:
  - "."
  gateways:
  - $SENTENCES_INGRESSGATEWAY_NS/sentences
  http:
  - route:
    - destination:
        host: sentences
